Revision history for WWW::Mechanize

{{$NEXT}}
    [DOCUMENTATION]
    - Fix broken Pod

1.89      2018-10-18 19:13:34Z
    [ENHANCEMENTS]
    - Add support to find_image() and find_all_images() via 'id'
      and 'class' (GH#242) (Julien Fiegehenn)
    - Pass strict/verbose constructor args to HTML::Form (GH#256) (Julien Fiegehenn)
    - Add ability to clear history and tests for history (GH#259) (mschae94)

1.88      2018-03-23 15:37:25Z
========================================
    [FIXED]
    - tick() now dies if checkbox is not found (GH#248) (Olaf Alders)

    [DOCUMENTATION]
    - Clarify behaviour of submit_form when with_fields is supplied as an arg (GH#247) (Olaf Alders)
    - Document some "Best Practices" (GH#246) (Olaf Alders)
    - Update links in Pod. Suggest LWP::ConsoleLogger rather than LWP::Debug (GH#244) (Olaf Alders)

1.87      2018-02-07 22:04:16Z
========================================
    [FIXED]
    - Fix typo in contributor name (GH#241) (Philippe Bruhat (BooK))
    - Fix link to Michael Schilli's article in Linux magazine (GH#240) (Bernhard Wagner)
    - Fix some section links (GH#238) (Evan Zacks)
    - Override _agent() method. (GH#236) (Сергей Романов)
    - Link to appropriate section of HTML::Form (GH#237) (Evan Zacks)
    - Make version consistent in .pm files (GH#231) (Olaf Alders)

    [ENHANCEMENTS]
    - Return form number in list context. (GH#235) (Сергей Романов)
    - Overload 'post' in order to set 'base'. (GH#111) (Stuart A Johnston)
    - Allow multiple file paths/uris in mech-dump; fixes issue 72 (GH#113) (Nik LaBelle)
    - Add docs for the output of dump_forms (GH#112) (John Beppu)

1.86      2017-07-04 15:48:46Z
========================================
    [FIXED]
    - use 127.0.0.1 instead of 'localhost' in a test script to avoid the test
      hanging due to ipv6 issues (GH#31, see also changes in 1.85)

1.85      2017-06-28 22:06:00Z
========================================
    [FIXED]