@@ -23,6 +23,7 @@ dir = bin
 
 [Prereqs / RuntimeRequires]
 perl = 5.006
+Scalar::Util = 1.14
 
 [Prereqs / TestRequires]
 CGI = 4.32
